Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: front-end-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: back-end-api-app
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: back-end-api-app
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-frontend
spec:
  podSelector:
    matchLabels:
      app: back-end-api-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front-end-app
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: front-end-app
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-admin-backend
spec:
  podSelector:
    matchLabels:
      app: admin-front-end-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: admin-back-end-api-app
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: admin-back-end-api-app
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-backend-to-admin-frontend
spec:
  podSelector:
    matchLabels:
      app: admin-back-end-api-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: admin-front-end-app
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: admin-front-end-app
